--- a/NDVI_Montly_Standalone.ipynb
+++ b/NDVI_Montly_Standalone.ipynb
@@ -42,7 +42,7 @@
       "source": [
         "\n",
         "ee.Authenticate()\n",
-        "ee.Initialize(project='ee-jaalvalcan')\n"
+        "ee.Initialize(project='ee-jjjjj')\n"
       ],
       "metadata": {
         "id": "M5Dyu615ttUR"
