--- a/BlueCarbon_EstimationTool.ipynb
+++ b/BlueCarbon_EstimationTool.ipynb
@@ -164,7 +164,7 @@
         "\"\"\"\n",
         "Blue Carbon Estimation Tool\n",
         "Methodology: Warner, D., Callahan, J., McKenna, T. (Delaware Geological Survey)\n",
-        "Implementation: [Your Name]\n",
+        "Implementation: [Javier Valdes]\n",
         "Platform: Google Earth Engine\n",
         "Data Sources: NASA GEDI L4B, Sentinel-2, ESA WorldCover\n",
         "\"\"\""
